<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Vlad Mihalachi
  ~
  ~ This file is part of Turbo Editor.
  ~
  ~ Turbo Editor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Turbo Editor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<!--Generated by crowdin.net-->
<resources>
    <string name="use_monospace">Use monospace</string>
    <string name="recent_files">Recent files</string>
    <string name="font_size">Font size</string>
    <string name="connection_name">Connection Name</string>
    <string name="line_numbers">Line Numbers</string>
    <string name="wrap_content">Wrap content</string>
    <string name="view_it_on_the_web">View it on the web</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="light_theme">Light Theme</string>
    <string name="goto_line">Go to Line…</string>
    <string name="goto_page">Go to Page…</string>
    <string name="find">Find</string>
    <string name="replace">Replace</string>
    <string name="share">Share</string>
    <string name="keyboard_suggestions_and_swipe">Keyboard suggestions and Swipe</string>
    <string name="enable_autoencoding">Auto-Encoding</string>
    <string name="set_as_working_folder">Set as the working folder</string>
    <string name="add_file_or_folder">Add file or folder</string>
    <string name="is_the_working_folder">This is the working folder</string>
    <string name="save_changes">Do you want to save the changes to the file %s?</string>
    <string name="regular_expression">Regular Expression</string>
    <string name="text_to_find">Text to find</string>
    <string name="text_to_replace">Text to replace</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="please_wait">Please wait…</string>
    <string name="occurrences_found">%s occurrences was found</string>
    <string name="app_version_new">v%s</string>
    <string name="translate_the_app">Translate</string>
    <string name="changelog">Changelog</string>
    <string name="match_case">Match case</string>
    <string name="long_click_for_more_options">Long click for more options</string>
    <string name="auto_save">Auto save</string>
    <string name="read_only">Read only</string>
    <string name="send_error_reports">Send error reports</string>
    <string name="extra_options">Extra options</string>
    <string name="split_text_if_too_long">Split the text if too long</string>
    <string name="ignore_back_button">Ignore back button</string>
    <string name="codifica">Encoding</string>
    <string name="condividi">Share</string>
    <string name="info">Info</string>
    <string name="nome_app_turbo_editor">Turbo Editor</string>
    <string name="preferenze">Preferences</string>
    <string name="salva">Save</string>
    <string name="save_as">Save as</string>
    <string name="menu_syntax_highlight">Syntax highlight</string>
    <string name="testo_indietro">Undo</string>
    <string name="testo_rifai">Redo</string>
    <string name="open">Open</string>
    <string name="file_saved_with_success">The file %1$s was saved with success!</string>
    <string name="open_a_file">Open a file</string>
    <string name="open_a_folder">Open a folder</string>
    <string name="no">No</string>
    <string name="new_file">New file</string>
    <string name="delete_current_file">Delete current file</string>
    <string name="replace_all">Replace all</string>
    <string name="theme">Theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="theme_black">Black theme</string>
    <string name="view_markdown_result">View markdown result</string>
    <string name="accessory_view">Accessory view</string>
    <string name="file_cannot_be_renamed">The file cannot be renamed</string>
    <string name="use_storage_access_framework">Use the "Storage Access Framework"</string>
    <string name="storage_required">Need storage access to read without Storage Access Framework</string>
</resources>
