<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2014 Vlad Mihalachi
  ~
  ~ This file is part of Turbo Editor.
  ~
  ~ Turbo Editor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Turbo Editor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/navigation_drawer_background_inverted"
    android:paddingTop="10dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@id/drawer_buttons"
    android:orientation="vertical"
    >

    <TextView
        android:id="@id/drawer_button_go_pro"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/donation_action"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:textColor="@color/indigo"/>

    <androidx.appcompat.widget.SwitchCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/line_numbers"
            
            android:textSize="12sp"
            android:id="@id/switch_line_numbers"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"
            />

    <androidx.appcompat.widget.SwitchCompat
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/menu_syntax_highlight"
        
        android:textSize="12sp"
        android:id="@id/switch_syntax"
        android:layout_gravity="center_horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

    <androidx.appcompat.widget.SwitchCompat
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/wrap_content"
        
        android:textSize="12sp"
        android:id="@id/switch_wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

    <androidx.appcompat.widget.SwitchCompat
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/use_monospace"
        
        android:textSize="12sp"
        android:id="@id/switch_monospace"
        android:layout_gravity="center_horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

    <androidx.appcompat.widget.SwitchCompat
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/read_only"
        
        android:textSize="12sp"
        android:id="@id/switch_read_only"
        android:layout_gravity="center_horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

    <TextView
        android:id="@id/drawer_button_font_size"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/font_size"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

    <TextView
        android:id="@id/drawer_button_extra_options"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/extra_options"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_vertical"
        android:textSize="12sp"
        android:clickable="true"
        android:background="?selectableItemBackground"
        android:textColor="@color/navigation_drawer_button_text_color_inverted"
        android:drawableRight="@drawable/abc_spinner_mtrl_am_alpha"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/other_options"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@id/drawer_button_theme"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/theme"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:clickable="true"
            android:background="?selectableItemBackground"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        <androidx.appcompat.widget.SwitchCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/accessory_view"
            android:textSize="12sp"
            android:id="@id/switch_accessory_view"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        <androidx.appcompat.widget.SwitchCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/use_storage_access_framework"
            android:textSize="12sp"
            android:id="@id/switch_storage_access_framework"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        <androidx.appcompat.widget.SwitchCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/keyboard_suggestions_and_swipe"
            android:textSize="12sp"
            android:id="@id/switch_suggestions_active"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        <androidx.appcompat.widget.SwitchCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/auto_save"
            android:textSize="12sp"
            android:id="@id/switch_auto_save"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        <TextView
            android:id="@id/drawer_button_encoding"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/codifica"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:clickable="true"
            android:background="?selectableItemBackground"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        <androidx.appcompat.widget.SwitchCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/ignore_back_button"
            android:textSize="12sp"
            android:id="@id/switch_ignore_backbutton"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        <androidx.appcompat.widget.SwitchCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/split_text_if_too_long"
            android:textSize="12sp"
            android:id="@id/switch_page_system"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        <androidx.appcompat.widget.SwitchCompat
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/send_error_reports"
            android:textSize="12sp"
            android:id="@id/switch_send_error_reports"
            android:layout_gravity="center_horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/navigation_drawer_button_text_color_inverted"/>

        </LinearLayout>

</LinearLayout>
    </ScrollView>